# mcp-tools

./: .env.example  .gitignore  Dockerfile  README.md  cloudbuild.yaml  docker-compose.yml  pyproject.toml  start-docker.ps1
mcp_tools/: __init__.py  __main__.py  base_server.py  example_endpoint.py  nocodb_test.sh
mcp_tools/drawings/: README.md  __init__.py  company_structure.py  constants.py  drawings.py  svg_generator.py
mcp_tools/health/: __init__.py  health.py
mcp_tools/nocodb/: __init__.py  helper.py  nocodb.py
tests/: test_base_server.py  test_company_structure.py  test_health.py  test_nocodb.py  test_svg_generator.py
